--- a/TO DO LIST/index.html
+++ b/TO DO LIST/index.html
@@ -12,7 +12,7 @@
     <div class="add-task">
       <div class="box-input">
         <div class="border">
-          <input type="text" name="text" class="input" placeholder="Your Task....">
+          <input type="text" id="taskInput" name="text" class="input" placeholder="Your Task....">
         </div>
       </div>
       <input type="datetime-local" id="deadlineInput" class="input1">
